--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quill",
-  "version": "2.0.0-dev.4",
+  "version": "2.0.0-dev.5",
   "description": "Your powerful, rich text editor",
   "author": "Jason Chen <jhchen7@gmail.com>",
   "homepage": "http://quilljs.com",
@@ -150,7 +150,7 @@
   },
   "scripts": {
     "build": "npm run lint && npm run build:webpack",
-    "build:webpack": "webpack --config _develop/webpack.config.js; rm dist/quill.core dist/quill.bubble dist/quill.snow",
+    "build:webpack": "webpack --config _develop/webpack.config.js && rm dist/quill.core dist/quill.bubble dist/quill.snow",
     "build:release": "./_develop/scripts/release.sh",
     "develop": "npm run start",
     "lint": "eslint blots core formats modules themes ui test",
