--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quill-ocean",
-  "version": "2.0.0-dev.5",
+  "version": "2.0.0-dev.6",
   "description": "Your powerful, rich text editor",
   "author": "Jason Chen <jhchen7@gmail.com>",
   "homepage": "http://quilljs.com",
@@ -149,7 +149,7 @@
     "trailingComma": "all"
   },
   "scripts": {
-    "build": "npm run lint && npm run build:webpack",
+    "build": "npm run build:webpack",
     "build:webpack": "webpack --config _develop/webpack.config.js && rm dist/quill.core dist/quill.bubble dist/quill.snow",
     "build:release": "./_develop/scripts/release.sh",
     "develop": "npm run start",
